[project]
name = "radion-sdk"
version = "0.2.1"
description = "Official async SDK for the Radion platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["radion", "sdk", "realtime", "websocket", "async", "polymarket"]
dependencies = ["websockets>=13.0", "msgspec>=0.18.0"]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "ty>=0.0.1a1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radion"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]

[tool.ty.environment]
root = ["./src"]
